--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -3,9 +3,9 @@ on: [push, pull_request, workflow_dispatch]
 jobs:
   docs:
     runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
+    #permissions:
+      #pages: write
+      #id-token: write
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
