--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -4,8 +4,8 @@ jobs:
   docs:
     runs-on: ubuntu-latest
     #permissions:
-      #pages: write
-      #id-token: write
+    #pages: write
+    #id-token: write
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -17,9 +17,9 @@ jobs:
           sphinx-build docs _build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
-#        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+        #        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         with:
           publish_branch: github-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: _build/
+          publish_dir: docs/_build/
           force_orphan: true
