--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -21,5 +21,5 @@ jobs:
         with:
           publish_branch: github-pages
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/_build/
+          publish_dir: _build/
           force_orphan: true
