--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,9 +28,9 @@ repos:
         entry: pylint
         language: system
         types: [python]
-      - id: pytest-check
-        name: pytest-check
-        entry: pytest
-        language: system
-        pass_filenames: false
-        always_run: true
+      # - id: pytest-check
+      #   name: pytest-check
+      #   entry: pytest
+      #   language: system
+      #   pass_filenames: false
+      #   always_run: true
